lec-01/shell-lec01.txt
MacBook-Pro-5:~ diba$ pwd
/Users/diba
MacBook-Pro-5:~ diba$ pwd
/Users/diba
MacBook-Pro-5:~ diba$ ls
Applications	Downloads	Movies		Public
Desktop		Google Drive	Music		git
Documents	Library		Pictures	recos
MacBook-Pro-5:~ diba$ cd git
MacBook-Pro-5:git diba$ ls
a.out				ucsb-cs16-s18-mirza.github.io
cs16				ucsb-cs24-s18.github.io
cs24				w18-cs16
gradescope			w18-cs24
lecture-1.cpp
MacBook-Pro-5:git diba$ 
MacBook-Pro-5:git diba$ 
MacBook-Pro-5:git diba$ 
MacBook-Pro-5:git diba$ ls
a.out
cs16
cs24
gradescope
lecture-1.cpp
ucsb-cs16-s18-mirza.github.io
ucsb-cs24-s18.github.io
w18-cs16
w18-cs24
MacBook-Pro-5:git diba$ ls
a.out
cs16
cs24
gradescope
lecture-1.cpp
ucsb-cs16-s18-mirza.github.io
ucsb-cs24-s18.github.io
w18-cs16
w18-cs24
MacBook-Pro-5:git diba$ ls -al
total 80
drwxr-xr-x  12 diba  staff    384 Apr  2 10:43 .
drwxr-xr-x+ 35 diba  staff   1120 Apr  1 21:36 ..
-rw-r--r--@  1 diba  staff  12292 Apr  2 13:37 .DS_Store
-rwxr-xr-x   1 diba  staff  16524 Apr  2 10:43 a.out
drwxr-xr-x   5 diba  staff    160 Apr  1 16:56 cs16
drwxr-xr-x  10 diba  staff    320 Apr  2 09:05 cs24
drwxr-xr-x   6 diba  staff    192 Apr  1 08:03 gradescope
-rw-r--r--@  1 diba  staff    502 Apr  2 10:44 lecture-1.cpp
drwxr-xr-x  38 diba  staff   1216 Apr  2 13:37 ucsb-cs16-s18-mirza.github.io
drwxr-xr-x  38 diba  staff   1216 Mar 31 20:53 ucsb-cs24-s18.github.io
drwxr-xr-x   7 diba  staff    224 Apr  1 08:01 w18-cs16
drwxr-xr-x   9 diba  staff    288 Apr  1 23:07 w18-cs24
MacBook-Pro-5:git diba$ ls -al
total 80
drwxr-xr-x  12 diba  staff    384 Apr  2 10:43 .
drwxr-xr-x+ 35 diba  staff   1120 Apr  1 21:36 ..
-rw-r--r--@  1 diba  staff  12292 Apr  2 13:37 .DS_Store
-rwxr-xr-x   1 diba  staff  16524 Apr  2 10:43 a.out
drwxr-xr-x   5 diba  staff    160 Apr  1 16:56 cs16
drwxr-xr-x  10 diba  staff    320 Apr  2 09:05 cs24
drwxr-xr-x   6 diba  staff    192 Apr  1 08:03 gradescope
-rw-r--r--@  1 diba  staff    502 Apr  2 10:44 lecture-1.cpp
drwxr-xr-x  38 diba  staff   1216 Apr  2 13:37 ucsb-cs16-s18-mirza.github.io
drwxr-xr-x  38 diba  staff   1216 Mar 31 20:53 ucsb-cs24-s18.github.io
drwxr-xr-x   7 diba  staff    224 Apr  1 08:01 w18-cs16
drwxr-xr-x   9 diba  staff    288 Apr  1 23:07 w18-cs24
MacBook-Pro-5:git diba$ cd cs16
MacBook-Pro-5:cs16 diba$ ls
PRIVATE-CS16-s18-gradescope-lab00
PRIVATE-lab00-solutions
MacBook-Pro-5:cs16 diba$ mkdir lec-01
MacBook-Pro-5:cs16 diba$ ls
PRIVATE-CS16-s18-gradescope-lab00
PRIVATE-lab00-solutions
lec-01
MacBook-Pro-5:cs16 diba$ ssh -X dimirza@csil-01.cs.ucsb.edu
dimirza@csil-01.cs.ucsb.edu's password: 
Warning: untrusted X11 forwarding setup failed: xauth key data not generated
Last login: Mon Apr  2 13:09:39 2018 from 169.231.114.195
[dimirza@csil-01 ~]$ ls
all-cs16                   Documents          public_html
all-cs24                   Downloads          st04
backup                     gdb1.cpp           Templates
bin                        git                test.cpp
cs16                       lab02_abbywysopal  test.cpp~
cs16-w18                   lectures           Videos
cs24-w18-lab-starter-code  Music              vim-configuration
cs24-w18-lecture-12        Pictures           wordpress
cs8                        PRIVATE_lec06
Desktop                    Public
[dimirza@csil-01 ~]$ cd cs16
[dimirza@csil-01 cs16]$ ls
backup  cs16-sp17-starter-code  labs  lectures
[dimirza@csil-01 cs16]$ mkdir s18
[dimirza@csil-01 cs16]$ ls
backup  cs16-sp17-starter-code  labs  lectures  s18
[dimirza@csil-01 cs16]$ cd s18
[dimirza@csil-01 s18]$ ;ls
-bash: syntax error near unexpected token `;'
[dimirza@csil-01 s18]$ ls
[dimirza@csil-01 s18]$ vim hello.cpp
[dimirza@csil-01 s18]$ g++ hello.cpp
[dimirza@csil-01 s18]$ ls
a.out  hello.cpp
[dimirza@csil-01 s18]$ vim a.out 
[dimirza@csil-01 s18]$ ./a.out 
Hello World! 
[dimirza@csil-01 s18]$ vim hello.cpp
[dimirza@csil-01 s18]$ g++ hello.cpp
hello.cpp: In function ‘int main()’:
hello.cpp:12:5: error: expected ‘;’ before ‘return’
     return 0;
     ^~~~~~
[dimirza@csil-01 s18]$ vim hello.cpp
[dimirza@csil-01 s18]$ emacs hello.cpp 
[dimirza@csil-01 s18]$ ls
a.out  hello.cpp  hello.cpp~
[dimirza@csil-01 s18]$ ./a.out 
Hello World! 
[dimirza@csil-01 s18]$ packet_write_wait: Connection to 128.111.43.21 port 22: Broken pipe
MacBook-Pro-5:cs16 diba$ 
